tests/ui/missing_once.rs
fn main() {
    let _ = const_split_str::split_once!("head-tail", "?");
}
